# axum-sqlx-template

./: .env.example  Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  main.rs  state.rs  telemetry.rs
src/health/: handlers.rs  router.rs
